--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,10 +2,11 @@
 <resources>
     <string-array name="scope">
         <item>com.miui.euicc</item>
-        <item>app.septs.euiccprobe</item>
         <item>com.dentwireless.dentapp</item>
         <item>com.flexiroamx</item>
         <item>com.giffgaffmobile.controller</item>
         <item>com.redteamobile.redteago</item>
+        <item>kz.tele2.app</item>
+        <item>travel.eskimo.esim</item>
     </string-array>
 </resources>
